# xserver

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CODE_OVERVIEW.md  COPYING  NEWS  README.md  meson.build  meson_options.txt  xlibre-server.pc.in  xorg-server.pc.in
.gitlab-ci/: cross-prereqs-build.sh  debian-install.sh  meson-build.sh
Xext/: bigreq.c  dpms.c  geext.c  geext_priv.h  hashtable.c  meson.build  panoramiX.c  panoramiX.h  panoramiXh.h  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  shape.c  shm.c  shm_priv.h  shmint.h  sleepuntil.c  sync.c  vidmode.c  xace.c  xace.h  xacestr.h  xcmisc.c  xf86bigfont.c  xres.c  xselinux.h  xselinux_ext.c  xselinux_hooks.c  xtest.c  xvdisp.c  xvmain.c  xvmc.c
Xext/bigreq/: bigreq.c  meson.build
Xext/composite/: compalloc.c  compext.c  compinit.c  compint.h  compoverlay.c  compwindow.c
Xext/damage/: damageext.c
Xext/doublebuffer/: dbe.c  dbestruct.h  meson.build  midbe.c  midbe.h
Xext/dpms/: dpms.c  dpms_priv.h  meson.build
Xext/dri2/: dri2.c  dri2ext.c
Xext/dri2/pci_ids/: pci_id_driver_map.h  pci_id_util.h
Xext/dri3/: dri3.c  dri3_priv.h  dri3_request.c
Xext/geext/: geext.c  meson.build
Xext/glx/: clientinfo.c  createcontext.c  extension_string.c  glxcmds.c  glxcmdsswap.c  glxext.h  glxscreens.c  glxscreens.h  glxserver.h  glxutil.h  indirect_dispatch.c  indirect_dispatch_swap.c  indirect_program.c  indirect_reqsize.c  indirect_reqsize.h  indirect_table.h  indirect_texture_compression.c  indirect_util.c  rensize.c  single2.c  single2swap.c  singlepix.c  singlepixswap.c  swap_interval.c  unpack.h  xfont.c
Xext/glx/glx_dri/: glxdri2.c  glxdricommon.c  glxdriswrast.c
Xext/namespace/: config.c  namespace.c
Xext/panoramiX/: meson.build  panoramiX.c  panoramiX.h  panoramiXprocs.c
Xext/present/: present.c  present_event.c  present_execute.c  present_fake.c  present_fence.c  present_notify.c  present_priv.h  present_request.c  present_scmd.c  present_screen.c  present_vblank.c
Xext/randr/: randr.c  randrstr_priv.h  rrcrtc.c  rrdispatch.c  rrinfo.c  rrlease.c  rrmode.c  rrmonitor.c  rroutput.c  rrpointer.c  rrproperty.c  rrprovider.c  rrproviderproperty.c  rrscreen.c  rrtransform.c  rrxinerama.c
Xext/record/: record.c  set.c
Xext/render/: animcur.c  filter.c  glyph.c  glyphstr_priv.h  matrix.c  miindex.c  mipict.c  mirect.c  mitrap.c  mitri.c  picture.c  picturestr_priv.h  render.c
Xext/saver/: meson.build  saver.c
Xext/security/: meson.build  security.c
Xext/shape/: meson.build  shape.c
Xext/shm/: meson.build  shm.c  shm_priv.h
Xext/sync/: meson.build  sync.c
Xext/xcmisc/: meson.build  xcmisc.c
Xext/xf86bigfont/: meson.build  xf86bigfont.c
Xext/xfixes/: cursor.c  disconnect.c  region.c  saveset.c  select.c  xfixes.c  xfixes.h  xfixesint.h
Xext/xinput/: allowev.c  chgdctl.c  chgfctl.c  chgkbd.c  chgkmap.c  chgprop.c  chgptr.c  closedev.c  devbell.c  exevents.c  exglobals.h  extinit.c  getbmap.c  getdctl.c  getfctl.c  getfocus.c  getkmap.c  getmmap.c  getprop.c  getselev.c  getvers.c  grabdev.c  grabdev.h  grabdevb.c  grabdevk.c  gtmotion.c  listdev.c  opendev.c  queryst.c  selectev.c  sendexev.c  setbmap.c  setdval.c  setfocus.c  setmmap.c  setmode.c  ungrdev.c  ungrdevb.c  ungrdevk.c  xiallowev.c  (+17 more)
Xext/xkeyboard/: XKBAlloc.c  XKBGAlloc.c  XKBMAlloc.c  XKBMisc.c  ddxBeep.c  ddxCtrls.c  ddxKillSrv.c  ddxLEDs.c  ddxLoad.c  ddxPrivate.c  ddxVT.c  maprules.c  meson.build  xkb.c  xkbAccessX.c  xkbActions.c  xkbEvents.c  xkbInit.c  xkbLEDs.c  xkbPrKeyEv.c  xkbUtils.c  xkbfmisc.c  xkbgeom_priv.h  xkbout.c  xkbsrv_priv.h  xkbtext.c  xkmread.c
Xext/xres/: meson.build  xres.c
Xext/xselinux/: meson.build  xselinux_ext.c  xselinux_hooks.c  xselinux_label.c
Xext/xtest/: meson.build  xtest.c
Xext/xv/: meson.build  xvdisp.c  xvdix_priv.h  xvmain.c  xvmc.c
Xi/: XIstubs.h  allowev.c  chgdctl.c  chgfctl.c  chgkbd.c  chgkmap.c  chgprop.c  chgptr.c  chgptr.h  closedev.c  devbell.c  exevents.c  extinit.c  getbmap.c  getdctl.c  getdctl.h  getfctl.c  getfocus.c  getkmap.c  getmmap.c  getprop.c  getprop.h  getselev.c  getvers.c  grabdev.c  grabdevb.c  grabdevk.c  gtmotion.c  handlers.h  listdev.c  listdev.h  opendev.c  queryst.c  selectev.c  sendexev.c  setbmap.c  setdval.c  setfocus.c  setmmap.c  setmode.c  (+20 more)
composite/: compalloc.c  compext.c  compinit.c  compint.h  compositeext.h  compoverlay.c  compwindow.c
config/: config-backends.h  config-hal.h  config-udev.h  config-wscons.h  config.c  hal.c  hotplug_priv.h  udev.c  wscons.c
damageext/: damageext.c
dbe/: dbe.c  midbe.h
dix/: atom.c  callback_priv.h  color.c  colormap.c  colormap_priv.h  cursor.c  cursor_priv.h  devices.c  dispatch.c  dix_priv.h  dixfonts.c  dixgrabs_priv.h  dixstruct_priv.h  dixutils.c  enterleave.c  eventconvert.c  events.c  extension.c  gc.c  gc_priv.h  gestures.c  getevents.c  globals.c  glyphcurs.c  grabs.c  input_priv.h  inpututils.c  main.c  meson.build  pixmap.c  privates.c  property.c  ptrveloc.c  region.c  reqhandlers_priv.h  request_priv.h  rpcbuf.c  (+22 more)
hw/kdrive/fbdev/: Xfbdev.man  fb_glamor.c  fbdev.c  fbdev.h  fbinit.c  meson.build
hw/kdrive/linux/: bus.c  evdev.c  keyboard.c  linux.c  meson.build  mouse.c  ms.c  ps2.c  tslib.c
hw/kdrive/linux/evdev/: evdev.c  evdev.h  evdev_autodetect.c
hw/kdrive/src/: kcmap.c  kd_glamor_xv.c  kdrive-config.h.meson.in  kdrive.c  kdrive.h  kinfo.c  kinput.c  kmode.c  kxv.c  kxv.h  meson.build
hw/xfree86/drivers/input/null/: meson.build  null.c
hw/xquartz/pbproxy/: main.m  meson.build  pbproxy.h  x-input.m
test/info/: meson.build
test/pyxtest/: README.md  asan.py  conftest.py  ensure-meson-tests.sh  meson.build  test_font.py  test_glx.py  test_present.py  test_randr.py  test_record.py  test_render.py  test_screensaver.py  test_shm.py  test_sync.py  test_vidmode.py  test_xi.py  test_xinerama.py  test_xkb.py  test_xres.py  valgrind.py  valgrind.suppressions  xclient.py  xserver.py
test/pyxtest/proto/: __init__.py  bigrequests.py  glx.py  present.py  randr.py  record.py  render.py  screensaver.py  shm.py  sync.py  vidmode.py  x11.py  xi.py  xinerama.py  xkb.py  xres.py
(+664 files in other folders)
